[package]
name = "astroblasto_multiplayer"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5.0-rc.2"
rand = "0.6"
nalgebra = "*"
mint = "*"
tokio = "0.1.5"
tokio-io = "0.1.6"
tokio-codec = "*"
futures = "0.1.21"
socket2 = "0.3.4"
bytes = "*"
bytevec = "*"
